--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
         <webdrivermanager.version>1.6.2</webdrivermanager.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <allure.version>1.5.2</allure.version>
+        <jetty-maven-plugin>9.2.10.v20150310</jetty-maven-plugin>
+        <aspectj.version>1.8.5</aspectj.version>
+        <maven.surefire.plugin>3.5.0</maven.surefire.plugin>
+        <allure.plugin>2.2</allure.plugin>
     </properties>
 
     <dependencies>
@@ -35,6 +40,61 @@
             <version>${webdrivermanager.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>ru.yandex.qatools.allure</groupId>
+            <artifactId>allure-testng-adaptor</artifactId>
+            <version>${allure.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven.surefire.plugin}</version>
+            <configuration>
+                <testFailureIgnore>true</testFailureIgnore>
+                <argLine>
+                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                </argLine>
+            </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>org.aspectj</groupId>
+                    <artifactId>aspectjweaver</artifactId>
+                    <version>${aspectj.version}</version>
+                </dependency>
+            </dependencies>
+        </plugin>
+
+                <!--Needed only to show reports locally. Run jetty:run and
+                    open localhost:8080 to show the report-->
+        <plugin>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>${jetty-maven-plugin}</version>
+            <configuration>
+                <webAppSourceDirectory>${project.build.directory}/site/allure-maven-plugin</webAppSourceDirectory>
+                <stopKey>stop</stopKey>
+                <stopPort>1234</stopPort>
+                </configuration>
+        </plugin>
+        </plugins>
+    </build>
+    <reporting>
+        <excludeDefaults>true</excludeDefaults>
+        <plugins>
+            <plugin>
+                <groupId>ru.yandex.qatools.allure</groupId>
+                <artifactId>allure-maven-plugin</artifactId>
+                <version>${allure.plugin}</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
